cmake_minimum_required(VERSION 3.0)
project("Intro to C" C)
set(CMAKE_C_STANDARD 99)

add_executable(0 "0 Hello World.c")
add_executable(1 "1 Basic Numeric Data Types.c")
add_executable(2 "2 Aliasing.c")
add_executable(3 "3 Fixed-width Integer Types.c")
add_executable(4 "4 Booleans.c")
add_executable(5 "5 Pointers.c")
add_executable(6 "6 Addresses.c")
add_executable(7 "7 Mem. Frag. and Leak.c")
