cmake_minimum_required(VERSION 3.0)
project("Intro to C" C)
set(CMAKE_C_STANDARD 99)

add_executable(00 "00 Hello World.c")
add_executable(01 "01 Basic Numeric Data Types.c")
add_executable(02 "02 Aliasing.c")
add_executable(03 "03 Fixed-width Integer Types.c")
add_executable(04 "04 Booleans.c")
add_executable(05 "05 Pointers.c")
add_executable(06 "06 Addresses.c")
add_executable(07 "07 Mem. Frag. and Leak.c")
add_executable(08 "08 Arrays.c")
add_executable(09 "09 Array Sizes.c")
add_executable(10 "10 Stack Smashing.c")
add_executable(11 "11 String Functions.c")
add_executable(12 "12 IO.c")
add_executable(13 "13 String–Number Conversion.c")
add_executable(14 "14 Functions.c")
