cmake_minimum_required(VERSION 3.5)
project("Intro to C" C)
set(CMAKE_C_STANDARD 99)

add_executable(0 "0 Hello World.c")
add_executable(1 "1 Basic Numeric Data Types.c")
add_executable(2 "2 Aliasing.c")
add_executable(3 "3 Fixed-width Integer Types.c")
add_executable(4 "4 Booleans.c")
add_executable(5 "5 Pointers.c")
add_executable(6 "6 Addresses.c")
add_executable(7 "7 Arrays.c")
add_executable(8 "8 Array Sizes.c")
add_executable(9 "9 Functions.c")
add_executable(A "A First-class Functions.c")
add_executable(B "B Varargs.c")

add_executable(XEH "x Error Handling.c")
add_executable(XFL "x Memory Fragmentation and Leak.c")
add_executable(XIO "x IO.c")
add_executable(XSF "x String Functions.c")
add_executable(XSN "x String–Number Conversion.c")
add_executable(XSS "x Stack Smashing.c")
